# tiller

./: CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: python-app.yml
examples/: TOMLExample.toml  example.html  example.txt  example1.html  example3.md
src/namatuzio_tiller_package/: main.py
src/namatuzio_tiller_package/examples/: InvalidTOMLExample.toml  example2.txt
tests/: test_main.py
tests/examples/: TOMLExample.toml  example3.md  example4.html
