[project]
name = "namatuzio_tiller"
version = "1.0.3"
authors = [
  { name="Nicolas Amatuzio", email="nictuzio@gmail.com" },
]
description = "Tiller is a command line interface for transforming text and markdown files into HTML files."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typer==0.3.2",
  "Markdown==3.3.7",
  "ruff==0.1.3",
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
]

[project.scripts]
tiller = "src.namatuzio_tiller_package.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/Namatuzio/tiller"
Issues = "https://github.com/Namatuzio/tiller/issues"
Contributing = "https://github.com/Namatuzio/tiller/blob/main/CONTRIBUTING.md"

[tool.ruff.format]
exclude = ["examples/", ".venv/", ".ruff_cache/", "*.md", "*.txt", "LICENSE", ".gitignore"]

[tool.ruff.lint]
exclude = ["examples/", ".venv/", ".ruff_cache/", "*.md", "*.txt", "LICENSE", ".gitignore"]

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"